[gd_scene load_steps=13 format=3 uid="uid://cn5wi32eio3cs"]

[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_2plak"]
[ext_resource type="Texture2D" uid="uid://cvonj04yjsnxc" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_ie468"]
[ext_resource type="Texture2D" uid="uid://dbffmemjx8nuj" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_7xlbw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0konc"]
texture = ExtResource("1_ie468")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_y6j4i"]
font_names = PackedStringArray("Ubuntu")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_tnp5t"]
font = SubResource("SystemFont_y6j4i")
font_size = 60
font_color = Color(1, 0.17, 0.17, 1)
outline_size = 19
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2j3og"]
texture = ExtResource("2_7xlbw")
texture_margin_left = 32.0
texture_margin_right = 32.0
axis_stretch_horizontal = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_0xqdn"]
font_names = PackedStringArray("Ubuntu")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_hu218"]
font = SubResource("SystemFont_0xqdn")
font_size = 35
font_color = Color(0, 0, 0, 1)
outline_size = 6

[sub_resource type="Animation" id="Animation_krmuq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(321, -145)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(283, 670)]
}

[sub_resource type="Animation" id="Animation_71lk6"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.713726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1.3),
"transitions": PackedFloat32Array(1, 0.594604),
"update": 0,
"values": [Vector2(321, -145), Vector2(321, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.8),
"transitions": PackedFloat32Array(1.51572, 0.574349),
"update": 0,
"values": [Vector2(283, 670), Vector2(283, 402)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prb46"]
_data = {
"RESET": SubResource("Animation_krmuq"),
"default": SubResource("Animation_71lk6")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_2plak")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 321.0
offset_top = -145.0
offset_right = 832.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_0konc")

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -50.5
offset_right = 169.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "GAMEOVER"
label_settings = SubResource("LabelSettings_tnp5t")

[node name="ButtonPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 283.0
offset_top = 670.0
offset_right = 856.0
offset_bottom = 904.001
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_2j3og")

[node name="CenterContainer" type="CenterContainer" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -72.0
offset_right = 216.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ButtonPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 15
columns = 2

[node name="TimeSurvivedLabel" type="Label" parent="ButtonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_hu218")

[node name="TimeLabel" type="Label" parent="ButtonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:50"
label_settings = SubResource("LabelSettings_hu218")

[node name="MonstersDefeatedLabel" type="Label" parent="ButtonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_hu218")

[node name="CountMonstersLabel" type="Label" parent="ButtonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1233"
label_settings = SubResource("LabelSettings_hu218")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_prb46")
}
autoplay = "default"
